tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_metaprogramming_macro_result_type_mismatch/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type Field, found type str<4>
  ┌─ src/main.nr:4:25
  │
4 │                 let x = unquote!(quote { "test" });
  │                         --------------------------
  │

Aborting due to 1 previous error
