tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_metaprogramming_macro_result_type_mismatch/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type Field, found type str<4>
  ┌─ src/main.nr:4:25
  │
4 │                 let x = unquote!(quote { "test" });
  │                         --------------------------
  │

Aborting due to 1 previous error
